

set(VSS_CONFIGURATION_FAILED FALSE)

# Execute sdv_vss_util to create IDL files testcase only unique names = unique files
message("Create interface code for 'vss_unique_names_fail.csv'.")
execute_process(COMMAND "${SDV_VSS_UTIL}" "${CMAKE_CURRENT_LIST_DIR}/vss_unique_names_fail.csv" "-O${CMAKE_CURRENT_LIST_DIR}/generated/unique_names_fail/" --prefixdtestcase1 --version1.0.0.1 --enable_components)
set(FAIL_FOLDER "${CMAKE_CURRENT_LIST_DIR}/generated/unique_names_fail/")
if(EXISTS "${FAIL_FOLDER}")
    message(WARNING "(Fail) Folder exists: ${FAIL_FOLDER}")
    set(VSS_CONFIGURATION_FAILED TRUE)
else()
    message(STATUS "(OK) Folder does NOT exist: ${FAIL_FOLDER}")
endif()

# Execute sdv_vss_util to create IDL files testcase only unique names but test should fail
message("Create interface code for 'vss_unique_names.csv'.")
execute_process(COMMAND "${SDV_VSS_UTIL}" "${CMAKE_CURRENT_LIST_DIR}/vss_unique_names.csv" "-O${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/" --prefixtestcase2 --version1.0.0.1 --enable_components)
set(UNIQUE_NAMES_FOLDER "${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/")
if(EXISTS "${UNIQUE_NAMES_FOLDER}")
    message(STATUS "(OK) Folder exists: ${UNIQUE_NAMES_FOLDER}")
else()
    message(WARNING "(Fail) Folder does NOT exist: ${UNIQUE_NAMES_FOLDER}")
    set(VSS_CONFIGURATION_FAILED TRUE)
endif()

# Execute sdv_vss_util to create IDL files testcase with multiple names = files contain multiple signals 
message("Create interface code for 'vss_multiple_names.csv'.")
execute_process(COMMAND "${SDV_VSS_UTIL}" "${CMAKE_CURRENT_LIST_DIR}/vss_multiple_names.csv" "-O${CMAKE_CURRENT_LIST_DIR}/generated/multiple_names/" --prefixtestcase3 --version1.0.0.1 --enable_components)
set(MULTIPLE_NAMES_FOLDER "${CMAKE_CURRENT_LIST_DIR}/generated/multiple_names/")
if(EXISTS "${MULTIPLE_NAMES_FOLDER}")
    message(STATUS "(OK) Folder exists: ${MULTIPLE_NAMES_FOLDER}")
else()
    message(WARNING "(Fail) Folder does NOT exist: ${MULTIPLE_NAMES_FOLDER}")
    set(VSS_CONFIGURATION_FAILED TRUE)
endif()

# --- Final check ---
if(VSS_CONFIGURATION_FAILED)
    message(FATAL_ERROR "Configuration failed due to missing folders.")
endif()

# Execute vss_with_formula to create IDL files testcase with vehcile device has a convertion formula 
message("Create interface code for 'vss_with_formula.csv'.")
execute_process(COMMAND "${SDV_VSS_UTIL}" "${CMAKE_CURRENT_LIST_DIR}/vss_with_formula.csv" "-O${CMAKE_CURRENT_LIST_DIR}/generated/with_formula/" --prefixtestcase5 --version1.0.0.1 --enable_components)
set(MULTIPLE_NAMES_FOLDER "${CMAKE_CURRENT_LIST_DIR}/generated/with_formula/")
if(EXISTS "${WITH_FORMULA_FOLDER}")
    message(STATUS "(OK) Folder exists: ${WITH_FORMULA_FOLDER}")
else()
    message(WARNING "(Fail) Folder does NOT exist: ${WITH_FORMULA_FOLDER}")
    set(VSS_CONFIGURATION_FAILED TRUE)
endif()


# Execute idl_compiler to create interface code for 'vss_unique_names.csv'.
message("vss_unique_names.csv: compile all 8 idl files")
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/vss_vehiclechassisvdsteeringwheelangle_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/vss_vehiclechassisvdvehiclespeed_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/vss_vehiclechassisvdrearaxlerow_01wheel_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/vss_vehiclesoftwarevdapplicationsystemcounter_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)

execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/vss_vehiclechassisbssteeringwheelangle_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/vss_vehiclechassisbsvehiclespeed_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/vss_vehiclechassisbsrearaxlerow_01wheel_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/vss_vehiclesoftwarebsapplicationsystemcounter_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/unique_names/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)


# Execute idl_compiler to create interface code for 'vss_multiple_names.csv'.
message("vss_multiple_names.csv: compile all 8 idl files")
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/multiple_names/vss_files/vss_vehiclechassisvdrearaxlerow_01wheel_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/multiple_names/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/multiple_names/vss_files/vss_vehiclechassisvdsteeringwheelangle_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/multiple_names/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/multiple_names/vss_files/vss_vehiclechassisbsrearaxlerow_01wheel_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/multiple_names/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/multiple_names/vss_files/vss_vehiclechassisbssteeringwheelangle_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/multiple_names/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)


# Compile all components from 'vss_unique_names.csv'.
message("vss_unique_names.csv: compile 4 components")
add_subdirectory(generated/unique_names/vss_files/vd_steeringwheel)
add_subdirectory(generated/unique_names/vss_files/vd_vehiclechassisaxle)
add_subdirectory(generated/unique_names/vss_files/bs_steeringwheel)
add_subdirectory(generated/unique_names/vss_files/bs_vehiclechassisaxle)

# Compile all components from 'vss_multiple_names.csv'.
message("vss_multiple_names.csv: compile 4 components")
add_subdirectory(generated/multiple_names/vss_files/vd_steeringwheel)
add_subdirectory(generated/multiple_names/vss_files/vd_vehiclechassisaxle)
add_subdirectory(generated/multiple_names/vss_files/bs_steeringwheel)
add_subdirectory(generated/multiple_names/vss_files/bs_vehiclechassisaxle)


# Execute sdv_vss_util to create IDL files testcase all types
message("Create interface code for 'vss_all_types.csv'.")
execute_process(COMMAND "${SDV_VSS_UTIL}" "${CMAKE_CURRENT_LIST_DIR}/vss_all_types.csv" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/" --prefixtestcase4 --version1.0.0.1 --enable_components)
set(ALL_TYPES_FOLDER "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/")
if(EXISTS "${ALL_TYPES_FOLDER}")
    message(STATUS "(OK) Folder exists: ${ALL_TYPES_FOLDER}")
else()
    message(WARNING "(Fail) Folder does NOT exist: ${ALL_TYPES_FOLDER}")
    set(VSS_CONFIGURATION_FAILED TRUE)
endif()

# Execute idl_compiler to create interface code for 'vss_all_types.csv'.
message("vss_all_types.csv: compile all 212 idl files")
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleboolean_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleboolean_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleboolean_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleboolean_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclefloat_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclefloat_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclefloat_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclefloat_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicledouble_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicledouble_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicledouble_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicledouble_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclelongdouble_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclelongdouble_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclelongdouble_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclelongdouble_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclelonglong_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclelonglong_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclelonglong_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclelonglong_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclelong_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclelong_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclelong_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclelong_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleshort_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleshort_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleshort_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleshort_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclestring_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclestring_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclestring_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclestring_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclewstring_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclewstring_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclewstring_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclewstring_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleu8string_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleu8string_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleu8string_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleu8string_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleu16string_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleu16string_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleu16string_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleu16string_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleu32string_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleu32string_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleu32string_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleu32string_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclenative_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclenative_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclenative_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclenative_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleunsignedlonglong_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleunsignedlonglong_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleunsignedlonglong_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleunsignedlonglong_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleunsignedlong_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleunsignedlong_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleunsignedlong_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleunsignedlong_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleunsignedshort_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleunsignedshort_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleunsignedshort_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleunsignedshort_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint16_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint16_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint16_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint16_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint32_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint32_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint32_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint32_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint64_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint64_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint64_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint64_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint8_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint8_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint8_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleint8_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint16_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint16_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint16_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint16_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint32_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint32_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint32_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint32_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint64_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint64_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint64_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint64_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint8_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint8_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint8_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehicleuint8_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclechar_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclechar_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclechar_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclechar_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclechar16_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclechar16_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclechar16_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclechar16_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclechar32_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclechar32_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclechar32_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclechar32_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclewchar_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclewchar_bs_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclewchar_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/vss_vehiclechassisvehiclewchar_vd_tx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/all_types/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)

# Execute idl_compiler to create interface code for 'vss_with_formula.csv'.
message("vss_with_formula.csv: compile all 4 idl files")
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/with_formula/vss_files/vss_vehiclechassisbodyint32_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/with_formula/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/with_formula/vss_files/vss_vehiclechassisbodystring_vd_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/with_formula/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/with_formula/vss_files/vss_vehiclechassisbodyint32_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/with_formula/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)
execute_process(COMMAND "${SDV_IDL_COMPILER}" "${CMAKE_CURRENT_LIST_DIR}/generated/with_formula/vss_files/vss_vehiclechassisbodystring_bs_rx.idl" "-O${CMAKE_CURRENT_LIST_DIR}/generated/with_formula/vss_files/" "-I${SDV_FRAMEWORK_DEV_INCLUDE}" -Igenerated/vss_files/ --no_ps)

# Compile all components from  'vss_all_types.csv'.
message("vss_all_types.csv: compile 112 components")
add_subdirectory(generated/all_types/vss_files/vd_rxclassforboolean)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforfloat)
add_subdirectory(generated/all_types/vss_files/vd_rxclassfordouble)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforlongdouble)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforint16)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforint32)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforint64)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforint8)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforlong)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforlonglong)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforshort)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforstring)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforwstring)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforu8string)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforu16string)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforu32string)
add_subdirectory(generated/all_types/vss_files/vd_rxclassfornative)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforuint16)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforuint32)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforuint64)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforuint8)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforchar)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforchar16)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforchar32)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforwchar)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforunsignedlong)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforunsignedlonglong)
add_subdirectory(generated/all_types/vss_files/vd_rxclassforunsignedshort)

add_subdirectory(generated/all_types/vss_files/vd_txclassforboolean)
add_subdirectory(generated/all_types/vss_files/vd_txclassforfloat)
add_subdirectory(generated/all_types/vss_files/vd_txclassfordouble)
add_subdirectory(generated/all_types/vss_files/vd_txclassforlongdouble)
add_subdirectory(generated/all_types/vss_files/vd_txclassforint16)
add_subdirectory(generated/all_types/vss_files/vd_txclassforint32)
add_subdirectory(generated/all_types/vss_files/vd_txclassforint64)
add_subdirectory(generated/all_types/vss_files/vd_txclassforint8)
add_subdirectory(generated/all_types/vss_files/vd_txclassforlong)
add_subdirectory(generated/all_types/vss_files/vd_txclassforlonglong)
add_subdirectory(generated/all_types/vss_files/vd_txclassforshort)
add_subdirectory(generated/all_types/vss_files/vd_txclassforstring)
add_subdirectory(generated/all_types/vss_files/vd_txclassforwstring)
add_subdirectory(generated/all_types/vss_files/vd_txclassforu8string)
add_subdirectory(generated/all_types/vss_files/vd_txclassforu16string)
add_subdirectory(generated/all_types/vss_files/vd_txclassforu32string)
add_subdirectory(generated/all_types/vss_files/vd_txclassfornative)
add_subdirectory(generated/all_types/vss_files/vd_txclassforuint16)
add_subdirectory(generated/all_types/vss_files/vd_txclassforuint32)
add_subdirectory(generated/all_types/vss_files/vd_txclassforuint64)
add_subdirectory(generated/all_types/vss_files/vd_txclassforuint8)
add_subdirectory(generated/all_types/vss_files/vd_txclassforchar)
add_subdirectory(generated/all_types/vss_files/vd_txclassforchar16)
add_subdirectory(generated/all_types/vss_files/vd_txclassforchar32)
add_subdirectory(generated/all_types/vss_files/vd_txclassforwchar)
add_subdirectory(generated/all_types/vss_files/vd_txclassforunsignedlong)
add_subdirectory(generated/all_types/vss_files/vd_txclassforunsignedlonglong)
add_subdirectory(generated/all_types/vss_files/vd_txclassforunsignedshort)

add_subdirectory(generated/all_types/vss_files/bs_rxclassforboolean)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforfloat)
add_subdirectory(generated/all_types/vss_files/bs_rxclassfordouble)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforlongdouble)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforint16)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforint32)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforint64)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforint8)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforlong)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforlonglong)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforshort)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforstring)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforwstring)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforu8string)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforu16string)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforu32string)
add_subdirectory(generated/all_types/vss_files/bs_rxclassfornative)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforuint16)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforuint32)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforuint64)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforuint8)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforchar)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforchar16)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforchar32)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforwchar)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforunsignedlong)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforunsignedlonglong)
add_subdirectory(generated/all_types/vss_files/bs_rxclassforunsignedshort)

add_subdirectory(generated/all_types/vss_files/bs_txclassforboolean)
add_subdirectory(generated/all_types/vss_files/bs_txclassforfloat)
add_subdirectory(generated/all_types/vss_files/bs_txclassfordouble)
add_subdirectory(generated/all_types/vss_files/bs_txclassforlongdouble)
add_subdirectory(generated/all_types/vss_files/bs_txclassforint16)
add_subdirectory(generated/all_types/vss_files/bs_txclassforint32)
add_subdirectory(generated/all_types/vss_files/bs_txclassforint64)
add_subdirectory(generated/all_types/vss_files/bs_txclassforint8)
add_subdirectory(generated/all_types/vss_files/bs_txclassforlong)
add_subdirectory(generated/all_types/vss_files/bs_txclassforlonglong)
add_subdirectory(generated/all_types/vss_files/bs_txclassforshort)
add_subdirectory(generated/all_types/vss_files/bs_txclassforstring)
add_subdirectory(generated/all_types/vss_files/bs_txclassforwstring)
add_subdirectory(generated/all_types/vss_files/bs_txclassforu8string)
add_subdirectory(generated/all_types/vss_files/bs_txclassforu16string)
add_subdirectory(generated/all_types/vss_files/bs_txclassforu32string)
add_subdirectory(generated/all_types/vss_files/bs_txclassfornative)
add_subdirectory(generated/all_types/vss_files/bs_txclassforuint16)
add_subdirectory(generated/all_types/vss_files/bs_txclassforuint32)
add_subdirectory(generated/all_types/vss_files/bs_txclassforuint64)
add_subdirectory(generated/all_types/vss_files/bs_txclassforuint8)
add_subdirectory(generated/all_types/vss_files/bs_txclassforchar)
add_subdirectory(generated/all_types/vss_files/bs_txclassforchar16)
add_subdirectory(generated/all_types/vss_files/bs_txclassforchar32)
add_subdirectory(generated/all_types/vss_files/bs_txclassforwchar)
add_subdirectory(generated/all_types/vss_files/bs_txclassforunsignedlong)
add_subdirectory(generated/all_types/vss_files/bs_txclassforunsignedlonglong)
add_subdirectory(generated/all_types/vss_files/bs_txclassforunsignedshort)

# Compile all components from  'vss_with_formula.csv'.
message("vss_all_types.csv: compile 4 components")
add_subdirectory(generated/with_formula/vss_files/vd_rxclassforint32)
add_subdirectory(generated/with_formula/vss_files/vd_rxclassforstring)
add_subdirectory(generated/with_formula/vss_files/bs_rxclassforint32)
add_subdirectory(generated/with_formula/vss_files/bs_rxclassforstring)
